Compucom CCQA/src/objects/FCST_Product_Model__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Opportunity__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId Unused Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOwnerId__c</fullName>
        <formula>Opportunity__r.Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountOwnerId Unused Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Business_Unit__c</fullName>
        <label>Account Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_CPM_Region__c</fullName>
        <label>Account CPM Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Role__c</fullName>
        <formula>Opportunity__r.Account.Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account OwRole Unused Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FCST_Product_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Region__c</fullName>
        <label>Account Sales Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sub_region__c</fullName>
        <label>Account Sub region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FCST Product Models</relationshipLabel>
        <relationshipName>FCST_Product_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EndNumber__c</fullName>
        <label>EndNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCST_Product_Line_ID__c</fullName>
        <label>FCST Product Line ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_Revenue_Types__c</fullName>
        <label>FCST Revenue Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Period</label>
        <referenceTo>Fiscal_Year_Model__c</referenceTo>
        <relationshipLabel>FCST Product Models</relationshipLabel>
        <relationshipName>FCST_Product_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hyperion_Revenue_Type__c</fullName>
        <formula>FCST_Revenue_Types__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hyperion Revenue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <formula>LEFT(Opportunity__c ,15) &amp; &apos;#&apos; &amp; LEFT(Fiscal_Period__c,15) &amp; &apos;#&apos; &amp; LEFT(Planning_Version__c,15) &amp; &apos;#&apos; &amp; LEFT(Product__c,15)&amp; &apos;#&apos; &amp; LEFT(FCST_Product_Line_ID__c ,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_StageName__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity StageName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Type__c</fullName>
        <formula>IF((Opportunity_StageName__c=&apos;Identify&apos; || Opportunity_StageName__c=&apos;Qualify&apos; || Opportunity_StageName__c=&apos;Propose&apos; || Opportunity_StageName__c=&apos;Negotiate&apos; || Opportunity_StageName__c=&apos;Contracting/Closing&apos; ), &apos;Open&apos;,  IF(Opportunity_StageName__c=&apos;Lead (Above the Funnel)&apos;, &apos;Above the Funnel&apos;,  IF(Opportunity_StageName__c=&apos;Closed Won&apos;, &apos;Closed Won&apos;, &apos;&apos;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>IF( ISPICKVAL( Opportunity__r.Type, &apos;Annuity&apos;) || ISPICKVAL( Opportunity__r.Type, &apos;New Annuity&apos;) || ISPICKVAL( Opportunity__r.Type, &apos;Renewal Annuity&apos;) || ISPICKVAL( Opportunity__r.Type, &apos;Annuity Change&apos;) , &apos;Annuity&apos;,IF( ISPICKVAL( Opportunity__r.Type, &apos;Project Change&apos;) || ISPICKVAL( Opportunity__r.Type, &apos;Project&apos;) , &apos;Project&apos;,IF( ISPICKVAL( Opportunity__r.Type, &apos;Product&apos;)  , &apos;Product&apos;, &apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>FCST Product Models</relationshipLabel>
        <relationshipName>FCST_Product_Models1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Planning_Measure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Measure</label>
        <referenceTo>Planning_Financial_Measure__c</referenceTo>
        <relationshipLabel>FCST Product Models</relationshipLabel>
        <relationshipName>FCST_Product_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planning_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Version</label>
        <referenceTo>Planning_Version__c</referenceTo>
        <relationshipLabel>FCST Product Models</relationshipLabel>
        <relationshipName>FCST_Product_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>FCST Product Models</relationshipLabel>
        <relationshipName>FCST_Product_Models1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Adjusted_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>User Adjusted Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_Revenue__c</fullName>
        <label>Weighted Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>FCST Product Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_StageName__c</columns>
        <columns>Planning_Measure__c</columns>
        <columns>Fiscal_Period__c</columns>
        <columns>Planning_Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRM-{000000}</displayFormat>
        <label>FCST Product Model Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCST Product Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>